# OpenGLTemplate

./: .clang-format  .gitignore  CMakeLists.txt  COMMITS.md
include/Engine/: Engine.h  Time.h
include/ModuleA/: ModuleA.h
include/ModuleB/: ModuleB.h
src/: main.cpp
src/Engine/: Engine.cpp  Time.cpp
src/ModuleA/: ModuleA.cpp
src/ModuleB/: ModuleB.cpp
